<resources>
    <string name="app_name">Pizze</string>
    <string name="pizza_image">pizza image</string>
    <string name="pizze">Pizze</string>
    <string name="email">email</string>
    <string name="password">password</string>
    <string name="sign_in"><u>Already have an account? Sign in</u></string>
    <string name="username">username</string>
    <string name="sign_up_here"><u>Sign Up Here</u></string>
    <string name="register">Register</string>
    <string name="sign_up">Sign Up</string>
    <string name="pizza_logo">pizza logo</string>
    <string name="first_name">first name</string>
    <string name="last_name">last name</string>
    <string name="you_have_not_signed_in">You have not signed in</string>
    <string name="you_registered">You are now registered!</string>
    <string name="you_signed_in">You are signed in</string>
    <string name="title_activity_logged_in">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="sign_in_text">Sign in</string>
    <string name="profile">Profile</string>
    <string name="pizzas">Pizzas</string>
    <string name="search">Search</string>
    <string name="post">POST</string>
    <string name="log_out">Log Out</string>
    <string name="don_t_have_an_account_register"><u>Don\'t have an account? Register</u></string>
    <string name="write_caption">write caption</string>
    <string name="go_back">GO BACK</string>
    <string name="friends">friends</string>
    <string name="search_users">search users</string>
</resources>