<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_behavior="@string/appbar_scrolling_view_behavior"
    xmlns:android="http://schemas.android.com/apk/res/android">
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SignUp">

    <ImageView
        android:id="@+id/pizza_image_signing_in"
        android:layout_width="169dp"
        android:layout_height="175dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/pizza_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/pizza_logo" />

    <TextView
        android:id="@+id/sigining_in_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pizza_image_signing_in" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/email_sign_in_box"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sigining_in_text">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="309dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/password_sign_in_box"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email_sign_in_box">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="309dp"
            android:layout_height="wrap_content"
            android:maxLines="1"
            android:lines="1"
            android:singleLine="true"
            android:hint="@string/password" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/sign_in_button"
        android:layout_width="309dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:background="@color/light_red"
        android:text="@string/sign_in_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password_sign_in_box" />

</androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>